2009-11-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack6.ads: New test.
	* gnat.dg/specs/pack6_pkg.ads: New helper.

2009-11-25  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/powerpc/regnames-1.c: New test.

2009-11-25  Eric Botcazou  <ebotcazou@adacore.com>
            John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR ada/42170
	* ada/acats/run_acats: Bump stack limit to 16MB.

2009-11-25  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/pr40835.c: Require a thumb1 target, do not force
	-march=armv5te.

2009-11-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42008
	* gfortran.dg/pure_initializer_2.f90: New test.

2009-11-23  Jason Merrill  <jason@redhat.com>

	* g++.dg/tc1/dr147.C: Check for helpful messages. Add DR 318 tests.
	* g++.old-deja/g++.pt/ctor2.C: Adjust.
	* g++.dg/lookup/name-clash4.C: Adjust.

2009-11-23  Jason Merrill  <jason@redhat.com>

	* g++.dg/template/spec15.C: Check for helpful message.

2009-11-24  Janis Johnson  <janis187@us.ibm.com>

	* gcc.target/powerpc/altivec-32.c: Don't use -m64.
	* gcc.target/powerpc/const-compare.c: Require lp64, don't use -m64.
	* gcc.target/powerpc/darwin-bool-1.c: Require ilp32, remove dg-skip-if.
	* gcc.target/powerpc/paired-1.c: Require ilp32, don't use -m32.
	* gcc.target/powerpc/paired-2.c: Ditto.
	* gcc.target/powerpc/paired-3.c: Ditto.
	* gcc.target/powerpc/paired-4.c: Ditto.
	* gcc.target/powerpc/paired-5.c: Ditto.
	* gcc.target/powerpc/paired-6.c: Ditto.
	* gcc.target/powerpc/paired-7.c: Ditto.
	* gcc.target/powerpc/paired-8.c: Ditto.
	* gcc.target/powerpc/paired-9.c: Ditto.
	* gcc.target/powerpc/paired-10.c: Ditto.
	* gcc.target/powerpc/popcount-2.c: Don't use -m32.
	* gcc.target/powerpc/popcount-3.c: Don't use -m64.
	* gcc.target/powerpc/ppc-paired.c: Require ilp32, don't use -m32.
	* gcc.target/powerpc/pr39457.c: Don't use -m64.
	* gcc.target/powerpc/vsx-vector-1.c: Ditto.
	* gcc.target/powerpc/vsx-vector-2.c: Ditto.
	* gcc.target/powerpc/vsx-vector-3.c: Ditto.